# phronesis-framework

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: branch-ci.yml  pr-ci.yml  release.yml  scheduled-security.yml  sonarcloud.yml
deploy/observability/: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
docs/: CONTEXT-DECISIONS.md  OBS-DECISIONS.md  PROVIDERS-DECISIONS.md  index.md
docs/agents/: index.md
docs/communication/: index.md
docs/context/: index.md
docs/core/: index.md
docs/examples/: customer-support-system.md
docs/internal/: index.md
docs/mcp/: index.md
docs/memory/: index.md
docs/middleware/: index.md
docs/obs/: dashboards.md  index.md  stack.md
docs/pipelines/: index.md
docs/providers/: index.md
docs/replay/: index.md
docs/runtime/: index.md
docs/tools/: index.md
examples/: README.md
examples/_shared/: __init__.py  provider.py
examples/ex01_hello_agent/: README.md  cassette.jsonl  main.py
examples/ex02_research_assistant/: README.md  cassette.jsonl  main.py  tools.py
examples/ex03_chat_with_memory/: README.md  cassette.jsonl  main.py
examples/ex04_bull_vs_bear_debate/: README.md  cassette.jsonl  main.py  prompts.py
examples/ex05_sequence_pipeline/: README.md  cassette.jsonl  main.py
examples/ex06_parallel_fanout/: README.md  cassette.jsonl  main.py
examples/ex07_race_fastest_wins/: README.md  main.py
examples/ex08_fallback_chain/: README.md  (+1 more)
src/: main.py
tests/: test_main.py
(+503 files in other folders)
